# gnoswap

./: .dockerignore  .env.example  .gitignore  .setup.py.swp  ARCHITECTURE.ko.md  ARCHITECTURE.md  CLAUDE.md  DEBUGGING_FBLOCKMAP_NIL.md  Dockerfile  Gemfile  Makefile  README.md  SECURITY.md  block_to_timestamp_conversion_guide.md  changelog.md  compare-gas-reports.sh  deployer.sh  docker-compose.yml  emission.txt  gas-reports.sh  go.mod  go.sum  launchpad_changes_summary.md  launchpad_timestamp_changes.md  mapping.yml  public_call.txtar  remove_test_files.sh  requirements.txt  setup.py  setup2.py  sonar-project.properties  staker_timestamp_conversion_report.md  staker_timestamp_task_categories.md  test.sh  test_launchpad_compile.gno  warmup_test_failure_analysis.md
.makefile/: 1_pool.mk  2_position.mk  3_staker.mk  4_pool_position_staker.mk
.testcases/: consts.gno  gno_helper.gno  gs_test.gno
_makefile/: 1_pool.mk  3_staker.mk
_test/: XX_phase_v1.mk  _DUMMY_swap_scenario.gno  _GEN_mutli_msg.ipynb  _TEST_0_INIT_TOKEN_REGISTER_test.gno  _TEST_0_INIT_VARIABLE_AND_HELPER_test.gno  _TEST_INIT_basic_test.gno  _TEST_INIT_register_tokens_test.gno  _TEST_XX_google_sheet_test.gno  _TEST_XX_init_until_mint_for_router_test.gnoa  _TEST_XX_upper_range_test.gnoa  _TEST_full_happy_case_test.gno  _TEST_helper_test.gno  _TEST_init_only_test.gno  _TEST_live_test.gnoa  _TEST_router_native_middle_test.gnoa  _TEST_router_native_wrap_unwrap_test.gno  _TEST_router_native_wrap_unwrap_test.gnoa  _TEST_scenario_01_full_happy_case_test.gno  _TEST_scenario_01_full_happy_case_test.gnoa  _TEST_scenario_01_test.gno  _TEST_scenario_01_test.gnoa  _TEST_scenario_02_FAIL_too_small_amount_test.gno  _TEST_scenario_02_FAIL_too_small_amount_test.gnoa  _TEST_scenario_03_FAIL_liquidity_test.gno  _TEST_scenario_03_FAIL_liquidity_test.gnoa  _TEST_scenario_03_FAIL_too_small_liquidity_test.gnoa  _TEST_scenario_03_test.gnoa  _TEST_scenario_04_router_one_route_one_hop_test.gnoa  _TEST_scenario_04_test.gnoa  _TEST_scenario_05_router_one_route_two_hop_test.gnoa  _TEST_scenario_06_router_one_route_three_hop_println_test.gnoa  _TEST_scenario_07_FAIL_router_one_route_three_hop_large_amount_println_test.gnoa  _TEST_scenario_08_router_two_position_one_route_one_hop_println_test.gnoa  _TEST_scenario_98_router_only_upper_position_println_test.gnoa  _TEST_scenario_98_test.gnoa  _TEST_scenario_99_router_uniswap_sdk_test.gno  _TEST_scenario_99_router_uniswap_sdk_test.gnoXXX  gno.mod  (+19 more)
router/_TEST_/: _TEST_0_INIT_TOKEN_REGISTER_test.gno  _TEST_0_INIT_VARIABLE_AND_HELPER_test.gno  _TEST_0_INIT_VARS_HELPERS_test.gno  _TEST_router_all_2_route_2_hop_test.gno  _TEST_router_all_2_route_2_hop_test.gnoA  _TEST_router_ratio_test.gn  _TEST_router_swap_route_1route_1hop_native_in_out_test.gn  _TEST_router_swap_route_1route_1hop_native_in_out_test.gno  _TEST_router_swap_route_1route_1hop_native_in_out_test.gnoA  _TEST_router_swap_route_1route_1hop_native_in_out_test.gnoXX  _TEST_router_swap_route_1route_1hop_out_range_test.gn  _TEST_router_swap_route_1route_1hop_out_range_test.gnoA  _TEST_router_swap_route_1route_1hop_test.gn  _TEST_router_swap_route_1route_1hop_test.gnoA  _TEST_router_swap_route_1route_2hop_wrapped_native_in_out_test.gn  _TEST_router_swap_route_1route_2hop_wrapped_native_in_out_test.gnoA  _TEST_router_swap_route_1route_3hop_wrapped_native_middle_test.gn  _TEST_router_swap_route_1route_3hop_wrapped_native_middle_test.gnoA  _TEST_router_swap_route_2route_2hop_test.gn  _TEST_router_swap_route_2route_2hop_test.gno  _TEST_router_swap_route_2route_2hop_test.gnoA  _TEST_router_swap_route_2route_2hop_test.gnoXX  _TEST_routes_find_swap_path_test.gn  __TEST_0_INIT_TOKEN_REGISTER_test.gno  __TEST_0_INIT_VARS_HELPERS_test.gno  __TEST_Z_z1_swap_route_1route_1hop_filetest.gnoA  __TEST_Z_z2_swap_route_1route_1hop_out_range_filetest.gnoA  __TEST_Z_z3_swap_route_1route_1hop_native_in_out_filetest.gnoA  __TEST_Z_z4_swap_route_1route_2hop_wrapped_middle_filetest.gnoA  __TEST_Z_z5_dry_and_swap_filetest.gnoA  __TEST_router_all_2_route_2_hop_test.gnoA  __TEST_router_all_2_route_2_hop_with_emission_test.gnoA  __TEST_router_swap_route_1route_1hop_native_in_out_test.gnoA  __TEST_router_swap_route_1route_1hop_out_range_test.gnoA  __TEST_router_swap_route_1route_1hop_test.gnoA  __TEST_router_swap_route_1route_2hop_wrapped_native_in_out_test.gnoA  __TEST_router_swap_route_1route_3hop_wrapped_native_middle_test.gnoA  __TEST_router_swap_route_2route_2hop_test.gnoA  z1_ratio_filetest.gno  z1_swap_route_1route_1hop_filetest.gno  (+9 more)
staker/_TEST_/: _TEST_0_INIT_TOKEN_REGISTER_test.gno  _TEST_0_INIT_VARIABLE_AND_HELPER_test.gno  _TEST_staker_collect_reward_test.gn  _TEST_staker_collect_reward_test.gnoA  _TEST_staker_external_test.gnoA  _TEST_staker_full_test.gnoA  _TEST_staker_get_test.gn  _TEST_staker_get_test.gnoA  _TEST_staker_internal_external_test.gn  _TEST_staker_internal_external_test.gnoA  _TEST_staker_internal_test.gnoA  _TEST_staker_manage_pool_tiers_test.gn  _TEST_staker_manage_pool_tiers_test.gnoA  _TEST_staker_mint_and_stake_test.gn  _TEST_staker_mint_and_stake_test.gno  _TEST_staker_mint_and_stake_test.gnoA  _TEST_staker_native_create_collect_unstake_test.gnoA  _TEST_staker_one_external_native_test.gn  _TEST_staker_one_external_native_test.gnoA  _TEST_staker_one_external_test.gn  _TEST_staker_one_external_test.gnoA  _TEST_staker_one_increase_external_test.gn  _TEST_staker_one_increase_external_test.gnoA  _TEST_staker_rpc_api_test.gno  _TEST_staker_rpc_api_test.gnoA  _TEST_staker_rpc_get_test.gn  __TEST_0_INIT_TOKEN_REGISTER_test.gno  __TEST_0_INIT_VARIABLE_AND_HELPER_test.gno  __TEST_Z_z1_one_increase_external_filetest.gnoA  __TEST_Z_z2_one_external_filetest.gnoA  __TEST_Z_z3_internal_external_filetest.gnoA  __TEST_Z_z4_mint_and_stake_filetest.gnoA  __TEST_Z_z5_manage_pool_tier_filetest.gnoA  __TEST_staker_collect_reward_test.gnoA  __TEST_staker_external_short_warmup_period_test.gno  __TEST_staker_external_test.gnoA  __TEST_staker_full_test.gnoA  __TEST_staker_full_with_emission_test.gnoA  __TEST_staker_get_test.gnoA  __TEST_staker_internal_test.gnoA  (+10 more)
(+5113 files in other folders)
