package staker

import (
	"std"
	"testing"

	"gno.land/r/demo/gnoswap/consts"

	pl "gno.land/r/demo/pool"
	pn "gno.land/r/demo/position"

	"gno.land/r/demo/gnft"

	"gno.land/r/demo/bar"
	"gno.land/r/demo/qux"

	"gno.land/r/demo/gns"
	"gno.land/r/demo/obl"
)

func init() {
	// init pool tiers
	// tier 1
	poolTiers["gno.land/r/demo/bar:gno.land/r/demo/qux:500"] = 1 // DEV

	// tier 2
	poolTiers["GNS/USDT_500"] = 2
	poolTiers["ATOM/GNS_500"] = 2

	// tier 3
	poolTiers["ATOM/GNOT_500"] = 3
	poolTiers["ATOM/USDT_500"] = 3
	poolTiers["ATOM/WETH_500"] = 3
}

func TestPoolInitCreatePool(t *testing.T) {
	std.TestSetPrevAddr(test1)
	for i := 0; i < (5 * 1); i++ {
		gns.Faucet()
	}
	gns.Approve(a2u(consts.POOL_ADDR), consts.POOL_CREATION_FEE)

	pl.CreatePool(barPath, quxPath, 500, "130621891405341611593710811006") // tick 10_000 ≈ x2.7
	std.TestSkipHeights(1)
}

func TestPositionMint01(t *testing.T) {
	std.TestSetPrevAddr(test1)
	bar.Approve(a2u(consts.POOL_ADDR), consts.UINT64_MAX)
	qux.Approve(a2u(consts.POOL_ADDR), consts.UINT64_MAX)
	std.TestSkipHeights(2)

	lpTokenId, liquidity, amount0, amount1 := pn.Mint(
		barPath,      // token0
		quxPath,      // token1
		uint16(500),  // fee
		int32(9000),  // tickLower
		int32(11000), // tickUpper
		"1000",       // amount0Desired
		"1000",       // amount1Desired
		"1",          // amount0Min
		"1",          // amount1Min
		max_timeout,  // deadline
		test1.String(),
	)
	std.TestSkipHeights(1)

	shouldEQ(t, lpTokenId, 1)
	shouldEQ(t, gnft.OwnerOf(tid(lpTokenId)), std.GetOrigCaller()) // test1
	shouldEQ(t, amount0, "368")
	shouldEQ(t, amount1, "999")

	// approve nft to staker
	std.TestSetPrevAddr(test1)
	gnft.Approve(a2u(GetOrigPkgAddr()), tid(lpTokenId))
	std.TestSkipHeights(1)
}

func TestPositionMint02(t *testing.T) {
	std.TestSetPrevAddr(test1)
	bar.Approve(a2u(consts.POOL_ADDR), consts.UINT64_MAX)
	qux.Approve(a2u(consts.POOL_ADDR), consts.UINT64_MAX)
	std.TestSkipHeights(2)

	lpTokenId, liquidity, amount0, amount1 := pn.Mint(
		barPath,      // token0
		quxPath,      // token1
		uint16(500),  // fee
		int32(9100),  // tickLower
		int32(12000), // tickUpper
		"5000",       // amount0Desired
		"5000",       // amount1Desired
		"1",          // amount0Min
		"1",          // amount1Min
		max_timeout,  // deadline
		test1.String(),
	)
	std.TestSkipHeights(1)

	shouldEQ(t, lpTokenId, 2)
	shouldEQ(t, gnft.OwnerOf(tid(lpTokenId)), std.GetOrigCaller()) // test1
	shouldEQ(t, amount0, "3979")
	shouldEQ(t, amount1, "4999")

	// approve nft to staker
	std.TestSetPrevAddr(test1)
	gnft.Approve(a2u(GetOrigPkgAddr()), tid(lpTokenId))
	std.TestSkipHeights(1)
}

func TestCreateExternalIncentive(t *testing.T) {
	std.TestSetPrevAddr(test1)
	obl.Approve(a2u(consts.STAKER_ADDR), uint64(10_000_000_000))
	std.TestSkipHeights(1)

	CreateExternalIncentive(
		"gno.land/r/demo/bar:gno.land/r/demo/qux:500", // targetPoolPath
		"gno.land/r/demo/obl",                         // rewardToken
		"1000000000",                                  // rewardAmount 10_000_000_000
		1234569600,                                    // startTimestamp
		1234569600+TIMESTAMP_90DAYS,                   // endTimestamp
	)
	std.TestSkipHeights(1)

	obl.Approve(a2u(consts.STAKER_ADDR), uint64(10_000_000_000))
	std.TestSkipHeights(1)

	CreateExternalIncentive("gno.land/r/demo/bar:gno.land/r/demo/qux:500", "gno.land/r/demo/obl", "1000000000", 1234569600, 1234569600+TIMESTAMP_90DAYS)
	std.TestSkipHeights(1)
}

func TestStakeToken01(t *testing.T) {
	std.TestSetPrevAddr(test1)
	StakeToken(1) // GNFT tokenId
	std.TestSkipHeights(1)

	shouldEQ(t, gnft.OwnerOf(tid(1)), GetOrigPkgAddr()) // staker
	shouldEQ(t, len(deposits), 1)
}

func TestStakeToken02(t *testing.T) {
	std.TestSetPrevAddr(test1)
	StakeToken(2) // GNFT tokenId
	std.TestSkipHeights(1)

	shouldEQ(t, gnft.OwnerOf(tid(2)), GetOrigPkgAddr()) // staker
	shouldEQ(t, len(deposits), 2)
}

func TestCollectReward(t *testing.T) {
	std.TestSetPrevAddr(consts.INTERNAL_REWARD_ACCOUNT)
	gns.Approve(a2u(consts.STAKER_ADDR), consts.UINT64_MAX) // internal reward distribution
	std.TestSkipHeights(1)

	// before claim
	gnsOld := gns.BalanceOf(a2u(test1))
	std.TestSkipHeights(1)
	shouldEQ(t, gnsOld, 0)

	std.TestSetPrevRealm(consts.STAKER_PATH)
	std.TestSetOrigCaller(test1)
	CollectReward(1) // GNFT tokenId
	std.TestSkipHeights(1)

	gnsNew := gns.BalanceOf(a2u(test1))
	std.TestSkipHeights(1)
	shouldEQ(t, gnsNew, 24502)
}

func TestUnstakeToken01(t *testing.T) {
	std.TestSetPrevAddr(test1)
	std.TestSkipHeights(400) // spend more time

	UnstakeToken(1) // GNFT tokenId
	std.TestSkipHeights(1)

	shouldEQ(t, gnft.OwnerOf(tid(1)), test1)

	// check reward
	shouldEQ(t, gns.BalanceOf(a2u(test1)), 2487004)    // internal
	shouldEQ(t, obl.BalanceOf(a2u(test1)), 8000004851) // external
}

func TestUnstakeToken02(t *testing.T) {
	std.TestSetPrevAddr(test1)
	UnstakeToken(2) // GNFT tokenId
	std.TestSkipHeights(1)

	shouldEQ(t, gnft.OwnerOf(tid(2)), test1)

	// check reward
	shouldEQ(t, gns.BalanceOf(a2u(test1)), 19067029)   // internal
	shouldEQ(t, obl.BalanceOf(a2u(test1)), 8000037608) // external
}

func TestEndExternalIncentive(t *testing.T) {
	std.TestSetPrevAddr(test1)
	std.TestSkipHeights(9999999)
	EndExternalIncentive(std.GetOrigCaller().String(), "gno.land/r/demo/bar:gno.land/r/demo/qux:500", "gno.land/r/demo/obl") // use same parameter as CreateExternalIncentive()
	std.TestSkipHeights(1)

	shouldEQ(t, len(incentives), 0)
	shouldEQ(t, len(poolIncentives["gno.land/r/demo/bar:gno.land/r/demo/qux:500"]), 0)
}
